manifests/littlelink-server/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: littlelink
  namespace: jovian-prod
  labels:
    app: littlelink
    service: content
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: littlelink
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: littlelink
    spec:
      nodeSelector:
        connection: standard
      containers:
      - name: littlelink
        image: ghcr.io/timothystewart6/littlelink-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: littlelink-http
          protocol: TCP
