manifests/littlelink-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: littlelink-service
  namespace: jovian-prod
spec:
  selector:
    app: littlelink
  ports:
    - port: 3000
      targetPort: littlelink-http
      protocol: TCP
      name: littlelink-http
